--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ jar{
     archiveName 'PhoneBook.jar'
     manifest{
         attributes(
-                "Main-Class" : "PhoneBook.Main"
+                "Main-Class" : "java.Main"
         )
     }
 }
